--- a/src/app/shared/components/forms/usuario-crud-form/usuario-crud-form.component.html
+++ b/src/app/shared/components/forms/usuario-crud-form/usuario-crud-form.component.html
@@ -69,9 +69,49 @@
         [messages]="UsuarioCrudErrorMessages['role_id']"
       ></app-valid-messages-form>
     </c-col>
+    <c-col [md]="4">
+      <div cFormFloating>
+        <!-- <input
+          cFormControl
+          id="local_idInput"
+          placeholder="local_id"
+          type="text"
+          formControlName="local_id"
+          [ngClass]="{
+            'is-invalid':
+              getControl('local_id').invalid && getControl('local_id').touched,
+            'is-valid': getControl('local_id').valid
+          }"
+          appOnlyNumberAndPoint
+        /> -->
+        <select
+          cSelect
+          id="localInput"
+          formControlName="local_id"
+          [ngClass]="{
+            'is-invalid':
+              getControl('local_id').invalid && getControl('local_id').touched,
+            'is-valid': getControl('local_id').valid
+          }"
+        >
+          <option value="0" hidden>Seleccione un local</option>
+          <option
+            *ngFor="let local of Locales; let i = index"
+            [value]="local.id"
+          >
+            {{ local.nombre }}
+          </option>
+        </select>
+        <label cLabel for="localInput">Local</label>
+      </div>
+      <app-valid-messages-form
+        [errors]="getControlError('local_id')"
+        [messages]="UsuarioCrudErrorMessages['local_id']"
+      ></app-valid-messages-form>
+    </c-col>
 
     <c-col
-      [md]="12"
+      [md]="8"
       formGroupName="passwords"
       class=""
       *ngIf="!UsuarioCrudForm.controls.passwords.disabled"
