--- a/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
+++ b/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
@@ -161,7 +161,7 @@
       <c-row class="mb-4">
         <c-col>
           <div class="small text-body-secondary mt-3">
-            <span class="h4"> Cargando Empleados...</span>
+            <span class="h4"> Cargando <c-spinner size="sm" /></span>
           </div>
         </c-col>
       </c-row>
