--- a/src/app/pages/local/local-listado/local-listado.component.html
+++ b/src/app/pages/local/local-listado/local-listado.component.html
@@ -156,7 +156,10 @@
       <c-row class="mb-4">
         <c-col>
           <div class="small text-body-secondary mt-3">
-            <span class="h4"> Cargando Locals...</span>
+            <span class="h4">
+              Cargando
+              <c-spinner size="sm" />
+            </span>
           </div>
         </c-col>
       </c-row>
