--- a/src/app/shared/components/forms/producto-crud-form/producto-crud-form.component.html
+++ b/src/app/shared/components/forms/producto-crud-form/producto-crud-form.component.html
@@ -131,7 +131,7 @@
         [messages]="ProductoCrudErrorMessages['local_id']"
       ></app-valid-messages-form>
     </c-col>
-    <c-col [md]="4">
+    <!-- <c-col [md]="4">
       <div cFormFloating>
         <c-form-check switch sizing="lg">
           <input
@@ -150,7 +150,7 @@
         [errors]="getControlError('ilimitado')"
         [messages]="ProductoCrudErrorMessages['ilimitado']"
       ></app-valid-messages-form>
-    </c-col>
+    </c-col> -->
   </c-row>
   <c-row class="mb-4">
     <c-col class="text-center">
