--- a/src/app/pages/configuracion/servicios/servicio-editar/servicio-editar.component.html
+++ b/src/app/pages/configuracion/servicios/servicio-editar/servicio-editar.component.html
@@ -8,7 +8,7 @@
       <c-row class="mb-4">
         <c-col>
           <div class="small text-body-secondary mt-3">
-            <span class="h4"> Cargando servicio...</span>
+            <span class="h4"> Cargando <c-spinner size="sm" /></span>
           </div>
         </c-col>
       </c-row>
