--- a/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
+++ b/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
@@ -83,6 +83,7 @@
                     [Servicios]="Servicios"
                     [PedidoDetail]="empFactura"
                     (ActualizarProductos)="ActualizarProductos($event)"
+                    [EmpleadoId]="numberValue(empleado.id)"
                   ></app-pedido-new-form>
                 </div>
               </c-col>
