--- a/src/app/shared/components/forms/factura-detalle-form/factura-detalle-form.component.html
+++ b/src/app/shared/components/forms/factura-detalle-form/factura-detalle-form.component.html
@@ -79,7 +79,7 @@
         [messages]="PedidoCrudErrorMessages['servicio_id']"
       ></app-valid-messages-form>
     </c-col>
-    <c-col [md]="12" class="mb-3">
+    <!-- <c-col [md]="12" class="mb-3">
       <div cFormFloating>
         <select
           cSelect
@@ -102,14 +102,13 @@
         </select>
         <label cLabel for="metodoInput"
           >Método de Pago
-          <!-- <c-spinner size="sm" *ngIf="loadingMetodosPagos" /> -->
         </label>
       </div>
       <app-valid-messages-form
         [errors]="getControlError('metodo_pago_id')"
         [messages]="PedidoCrudErrorMessages['metodo_pago_id']"
       ></app-valid-messages-form>
-    </c-col>
+    </c-col> -->
   </c-row>
 
   <c-row class="mb-4 mt-2">
