--- a/src/app/shared/components/forms/pedido-new-form/pedido-new-form.component.html
+++ b/src/app/shared/components/forms/pedido-new-form/pedido-new-form.component.html
@@ -152,7 +152,7 @@
       </button>
     </c-col>
   </c-row>
-  <div formArrayName="metodos_pagos">
+  <div formArrayName="metodos_pagos" class="mb-4">
     <div class="d-flex align-items-center">
       <h5 class="mb-0 text-info me-3">Métodos de pago</h5>
       <button
@@ -160,16 +160,16 @@
         type="button"
         (click)="agregarMetodoPago()"
         class="me-3 text-white btn-sm"
+        *ngIf="MetodosPagoFormArray.controls.length < 2"
       >
         <svg cIcon height="18" name="cil-plus"></svg>
       </button>
     </div>
     <hr />
-    <div
-      *ngFor="let metodoP of MetodosPagoFormArray.controls; let m = index"
-      [formGroupName]="m"
-      class="position-relative mb-4"
-    >
+
+    @for (metodoP of MetodosPagoFormArray.controls; track $index; let m =
+    $index) {
+    <div [formGroupName]="m" class="position-relative">
       <c-row class="form-gasto">
         <h6 class="mb-3">Método de pago Nro. {{ m + 1 }}</h6>
         <c-col [md]="11">
@@ -197,7 +197,7 @@
                 </label>
               </div>
               <app-valid-messages-form
-                [errors]="getProductoFormControlError(m, 'metodo_pago_id')"
+                [errors]="getMetodoPagoFormControlError(m, 'metodo_pago_id')"
                 [messages]="PedidoCrudErrorMessages['metodo_pago_id']"
               ></app-valid-messages-form>
             </c-col>
@@ -214,7 +214,7 @@
                 <label cLabel for="monto_{{ m }}">Monto</label>
               </div>
               <app-valid-messages-form
-                [errors]="getProductoFormControlError(m, 'monto')"
+                [errors]="getMetodoPagoFormControlError(m, 'monto')"
                 [messages]="PedidoCrudErrorMessages['monto']"
               ></app-valid-messages-form>
             </c-col>
@@ -288,6 +288,13 @@
         </c-col>
       </c-row>
     </div>
+    } @if(MetodosPagoFormArray.controls.length == 0) {
+    <c-row class="text-center justify-content-center text-muted">
+      <c-col [md]="12">
+        <h6>Sin métodos de pago</h6>
+      </c-col>
+    </c-row>
+    }
   </div>
 
   <div formArrayName="productos">
@@ -303,11 +310,8 @@
       </button>
     </div>
     <hr />
-    <div
-      *ngFor="let prod of ProductorFormArray.controls; let i = index"
-      [formGroupName]="i"
-      class="position-relative"
-    >
+    @for (prod of ProductorFormArray.controls; track $index; let i = $index) {
+    <div [formGroupName]="i" class="position-relative">
       <c-row class="form-gasto">
         <h6 class="mb-3">Producto Nro. {{ i + 1 }}</h6>
         <c-col [md]="11">
@@ -495,6 +499,13 @@
         </c-col>
       </c-row>
     </div>
+    } @if(ProductorFormArray.controls.length == 0) {
+    <c-row class="text-center justify-content-center text-muted">
+      <c-col [md]="12">
+        <h6>Sin productos</h6>
+      </c-col>
+    </c-row>
+    }
   </div>
   <c-row class="mb-4 mt-2">
     <c-col [md]="6" class="d-flex align-items-center">
