fix: update Gasto and Nomina components for better user feedback and functionality
- Changed alert title from 'Agregando nomina' to 'Agregando gasto' in GastoInsertarComponent.
- Corrected success message text from 'Gasto agregada con éxito' to 'Gasto agregado con éxito'.
- Updated NominaInsertarComponent to include a new employee selection form and loading indicators.
- Modified Nomina service to include a new method for fetching employee payroll data.
- Refactored NominaCrudForm to remove unused fields and improve validation messages.
- Added new NominaSeleccionEmpleadoForm component for selecting employees and handling payroll data.
- Enhanced UI with loading indicators and improved error handling in forms.
- Updated styles for validation messages in SweetAlert.

--- a/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.html
+++ b/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.html
@@ -7,7 +7,20 @@
       <c-row class="mb-4">
         <c-col>
           <div class="small text-body-secondary mt-3">
-            <app-nomina-crud-form (FormsValues)="FormsValues($event)" />
+            <!-- <app-nomina-crud-form (FormsValues)="FormsValues($event)" /> -->
+            <app-nomina-seleccion-empleado-form
+              (FormsValues)="triggerNominaEmpleado($event)"
+            />
+
+            @if(_NominaService.LoadingCrud){
+            <div>
+              <h3>Cargando</h3>
+            </div>
+            } @if(!_NominaService.LoadingCrud && NominaEmpleadoSelecion){
+            <div>
+              <h3>{{ NominaEmpleadoSelecion | json }}</h3>
+            </div>
+            }
           </div>
         </c-col>
       </c-row>
