--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -83,6 +83,11 @@
   .swal2-container.auto .swal2-popup .swal2-success-circular-line-right {
     background-color: #212631 !important;
   }
+
+  .swal2-validation-message {
+    background-color: #212631 !important;
+    color: #db5a5a !important;
+  }
 }
 
 .form-floating {
