--- a/src/app/pages/panel/panel-list/panel-list.component.html
+++ b/src/app/pages/panel/panel-list/panel-list.component.html
@@ -18,7 +18,7 @@
         </c-col>
       </c-row>
       <c-row class="g-4">
-        <c-col
+        <!-- <c-col
           xl="3"
           lg="4"
           sm="6"
@@ -40,7 +40,7 @@
             </ng-template>
           </c-widget-stat-c>
           }
-        </c-col>
+        </c-col> -->
         <c-col
           xl="3"
           lg="4"
@@ -70,7 +70,7 @@
 
           }
         </c-col>
-        <c-col
+        <!-- <c-col
           xl="3"
           lg="4"
           sm="6"
@@ -96,7 +96,7 @@
             </ng-template>
           </c-widget-stat-c>
           }
-        </c-col>
+        </c-col> -->
         <c-col
           xl="3"
           lg="4"
