Agregar campo de porcentaje en el formulario de empleado; actualizar lógica de nómina para calcular valores facturados y totales.

--- a/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
+++ b/src/app/pages/empleado/empleado-listado/empleado-listado.component.html
@@ -73,6 +73,7 @@
                 <th class="bg-body-tertiary">#</th>
                 <th class="bg-body-tertiary">Nombre</th>
                 <th class="bg-body-tertiary">DNI</th>
+                <th class="bg-body-tertiary">Porcentaje</th>
                 <th class="bg-body-tertiary"></th>
               </tr>
             </thead>
@@ -91,6 +92,9 @@
                 </td>
                 <td>
                   <span>{{ Empleado.dni }}</span>
+                </td>
+                <td>
+                  <span>{{ Empleado.porcentaje }}%</span>
                 </td>
                 <td>
                   <div class="d-flex flex-direction">
