Actualizar tabla de nómina para incluir un estilo de tabla hover; corregir el cálculo de presentismo en el formulario de nómina.

--- a/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.scss
+++ b/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.scss
@@ -1,3 +1,4 @@
 table .bg-warning {
-  background-color: #ffc20b47 !important;
+  // background-color: #ffc20b47 !important;
+  background-color: transparent !important;
 }
