--- a/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.html
+++ b/src/app/pages/nomina/nomina-insertar/nomina-insertar.component.html
@@ -20,7 +20,7 @@
             </div>
             } @if(!_NominaService.LoadingCrud && NominaEmpleadoSelecion){
             <div>
-              <table class="table table-bordered text-center">
+              <table class="table table-bordered text-center table-hover">
                 <thead>
                   <tr>
                     <th>{{ NominaEmpleadoSelecion.nombre }}</th>
@@ -49,19 +49,6 @@
                       {{ servicioCantidad.cantidad }}
                     </td>
                   </tr>
-
-                  <tr>
-                    <td>PORCENTAJE</td>
-                    <td
-                      [attr.colspan]="
-                        NominaEmpleadoSelecion.nomina_empleado.servicios.length
-                      "
-                      class="bg-warning"
-                    >
-                      40%
-                    </td>
-                  </tr>
-
                   <tr>
                     <td>VALOR SERVICIOS</td>
                     <td
@@ -74,6 +61,8 @@
                       }"
                     >
                       @if( servicio.descripcion != 'TOTAL'){{{ servicio.precio_nomina | currency : "ARS"
+
+
                       }}}
                     </td>
                   </tr>
@@ -90,6 +79,17 @@
                       }"
                     >
                       {{ servicio.facturado | currency : "ARS" }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>PORCENTAJE</td>
+                    <td
+                      [attr.colspan]="
+                        NominaEmpleadoSelecion.nomina_empleado.servicios.length
+                      "
+                      class="bg-warning"
+                    >
+                      40%
                     </td>
                   </tr>
                 </tbody>
