--- a/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
+++ b/src/app/pages/nomina/nomina-listado/nomina-listado.component.html
@@ -112,14 +112,14 @@
                 </td>
                 <td>
                   <div class="d-flex flex-direction">
-                    <div class="me-3" ngbTooltip="Editar">
+                    <!-- <div class="me-3" ngbTooltip="Editar">
                       <a
                         [routerLink]="['/nominas', 'editar', nomina.id]"
                         cTooltip="Editar"
                       >
                         <svg cIcon height="18" name="cil-pencil"></svg>
                       </a>
-                    </div>
+                    </div> -->
                     <div
                       class=""
                       ngbTooltip="Eliminar"
